# Stargazer

./: CMakeLists.txt  README.md  Stargazer.cpp  Stargazer.h  Stargazer.kdev4  main.cpp
Assets/: ToneMap.Fragment.glsl
Assets/Definitions/: PlayerShip.xini
CMake-Modules/: EnableCPP11Flag.cmake  FindSpringbok.cmake
Concept/: Races.md
GameCode/: Assets.cpp  Assets.h  GameObject.cpp  GameObject.h  GameWorld.cpp  GameWorld.h  Ship.cpp  Ship.h  StarSystem.cpp  StarSystem.h
LibCode/: BoundingShapes.h  Controls.cpp  Controls.h  List_Templates.hpp
